--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
       min-width: 350px;
       min-height: 300px;
     }
-    #deal-pop {
+    .popup-card {
       background: #e8fafe;
       border-radius: 20px;
       border: 2px solid #e9e9e9;
@@ -64,7 +64,7 @@
       width: 100%;
       box-sizing: border-box;
     }
-    #track-btn {
+    #track-btn, #login-btn {
       background: #ffd6ef;
       color: #333;
       border: none;
@@ -77,7 +77,7 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    #track-btn:hover {
+    #track-btn:hover, #login-btn:hover {
       background: #ffb6e6;
     }
     #confirmation {
@@ -115,7 +115,13 @@
   </style>
 </head>
 <body>
-  <div id="deal-pop">
+  <div id="login-view" class="popup-card" style="display:none;">
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email" /><br />
+    <input type="password" id="password" placeholder="Password" /><br />
+    <button id="login-btn">Login</button>
+  </div>
+  <div id="track-view" class="popup-card" style="display:none;">
     <div id="product-info">
       <img id="product-image" src="icon.png" alt="Product Image" />
       <div>
@@ -133,7 +139,7 @@
     </label>
     <button id="track-btn">+ Track This Product</button>
   </div>
-  <div id="confirmation">
+  <div id="confirmation" class="popup-card" style="display:none;">
     <p>This product has been added and it's now being tracked</p>
     <img id="confirm-image" src="" alt="Product Image" />
     <div id="confirm-title">Product Name</div>
