--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -126,8 +126,8 @@
     <div class="contact">
         <h2>10. Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-        <p><strong>Email:</strong> privacy@dealpop.com</p>
-        <p><strong>Website:</strong> https://dealpop.com</p>
+        <p><strong>Email:</strong> privacy@dealpop.co</p>
+        <p><strong>Website:</strong> https://dealpop.co</p>
     </div>
 
     <div class="last-updated">
